# dqkit

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: ci_integration.md  custom_metrics.md  index.md  modules.md  usage.md
examples/: quickstart.ipynb
examples/dq_reports/: quickstart.html  quickstart.md
scripts/: generate_report.py
src/dqkit/: __init__.py  registry.py  standards.py  types.py
src/dqkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dqkit/anomaly/: __init__.py  anomaly.py
src/dqkit/checks/: __init__.py  checks.py
src/dqkit/drift/: __init__.py  drift.py
src/dqkit/imbalance/: __init__.py  imbalance.py
src/dqkit/io/: __init__.py  pandas_io.py
src/dqkit/logging/: __init__.py  logging.py
src/dqkit/missingness/: __init__.py  missingness.py
src/dqkit/noise/: __init__.py  noise.py
src/dqkit/profiling/: __init__.py  profiling.py
src/dqkit/redundancy/: __init__.py  features.py  rows.py
src/dqkit/report/: __init__.py  report.py
src/dqkit/representativeness/: __init__.py  compare.py
src/dqkit/slices/: __init__.py  slices.py
src/dqkit/validation/: __init__.py  validation.py
tests/: test_anomaly.py  test_checks.py  test_drift.py  test_imbalance.py  test_logging.py  test_missingness.py  test_noise.py  test_profiling.py  test_redundancy.py  test_redundancy_rows.py  test_registry.py  test_report.py  test_representativeness.py  test_slices.py  test_standards.py  test_validation_rules.py
